--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,3 +6,100 @@
 .colored-shadow {
     box-shadow: 0 4px 0px 5px rgba(107, 6, 179, 0.2);
   }
+
+
+  .headtag{
+    background: linear-gradient(90deg, #FF3BFF 0%, #ECBFBF 38.02%, #5C24FF 75.83%, #D94FD5 100%);
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+background-clip: text;
+
+}
+
+.profile-card-container {
+  display: grid;
+  grid-column: auto;
+  justify-content: center;
+  align-items: center;
+  gap: 0px; /* Adjust the gap between cards */
+  margin-top: 50px;
+  max-width: 1000px; /* Adjust the max-width if needed */
+  margin: 0 auto; /* Center the container */
+}
+
+  
+  .profile-card {
+    position: relative;
+    width: 300px;
+    height: 378px;
+    border-radius: 15px;
+    overflow: hidden;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  }
+  
+  .profile-card__image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .profile-card__footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+  }
+  
+  .profile-card__name {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+  
+  .profile-card__email {
+    font-size: 18px;
+    margin-bottom: 5px;
+  }
+  
+  .profile-card__hover-details {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+  }
+  
+  .profile-card__hover-name {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  
+  .profile-card__hover-email {
+    font-size: 18px;
+    margin-bottom: 10px;
+  }
+  
+  .profile-card__hover-info {
+    font-size: 16px;
+    text-align: center;
+  }
+  
+  .profile-card:hover .profile-card__hover-details {
+    opacity: 1;
+  }
+  
